[gd_scene load_steps=6 format=2]

[ext_resource path="res://project/src/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://project/src/Target.tscn" type="PackedScene" id=2]
[ext_resource path="res://project/src/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://project/src/Level.gd" type="Script" id=4]
[ext_resource path="res://project/assets/png/BG.png" type="Texture" id=5]

[node name="Level" type="Node2D"]
script = ExtResource( 4 )
Player = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1090.0
margin_bottom = 709.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 46.5613, 524.417 )

[node name="Ground" parent="." instance=ExtResource( 1 )]

[node name="Target" parent="." instance=ExtResource( 2 )]
position = Vector2( 938.452, 285.814 )

[node name="Target2" parent="." instance=ExtResource( 2 )]
position = Vector2( 939.712, 392.907 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 815.816
margin_top = 28.1761
margin_right = 978.816
margin_bottom = 78.1761
rect_scale = Vector2( 2, 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProjectileCount" type="Label" parent="."]
margin_left = 42.4405
margin_top = 48.119
margin_right = 141.44
margin_bottom = 66.119
rect_scale = Vector2( 2, 2 )
text = "Inventory: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 46.561, 524.417 )
[connection signal="body_shape_entered" from="Player" to="." method="_on_Player_body_shape_entered"]
[connection signal="launched" from="Player" to="." method="_on_Player_launched"]
[connection signal="sleeping_state_changed" from="Player" to="." method="_on_Player_sleeping_state_changed"]
